<resources>
    <string name="app_name">Tototo</string>
    <string name="developing">正在开发中...</string>
    <string name="home">主页</string>
    <string name="favourite">收藏</string>
    <string name="settings">设置</string>
    <string name="develop">后门</string>
    <string name="draw_header">我是头部</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo1">demo1</string>
    <string name="demo2">demo2</string>
    <string name="demo3">demo3</string>
</resources>
